tests/NormalTests/paczka1/fuzzy1/91006819.err
Error in line 1: cnTrctYB A379 76,0
Error in line 2: cnTrctYB A130 50,1
Error in line 5: cnTrctYB A379 59,0
Error in line 8: HyA4a S385 56,4
Error in line 7: cnTrctYB A130 36,0
Error in line 11: nTnZc A248 0,0
Error in line 15: p3RF1oG A379 82,1
Error in line 27: A130 A248 50,2
Error in line 31: A130 S385 100,0
Error in line 25: QrujJsWNjQ A248 94,7
